--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongoose": "^8.18.2",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
