--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -21,6 +21,10 @@
     "morgan": "^1.10.1"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.7.10"
+    "@eslint/js": "^9.36.0",
+    "@flydotio/dockerfile": "^0.7.10",
+    "@stylistic/eslint-plugin-js": "^4.4.1",
+    "eslint": "^9.36.0",
+    "globals": "^16.4.0"
   }
 }
