--- a/part4/bloglist-backend/package.json
+++ b/part4/bloglist-backend/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "lodash": "^4.17.21",
-    "mongoose": "^8.19.0"
+    "mongoose": "^8.19.0",
+    "supertest": "^7.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
