config playwright before exercise 5.17

--- a/part4/bloglist-backend/package.json
+++ b/part4/bloglist-backend/package.json
@@ -7,7 +7,8 @@
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development node --watch index.js",
     "test": "NODE_ENV=test node --test",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start:test": "NODE_ENV=test node --watch index.js"
   },
   "author": "",
   "license": "ISC",
